buf full screen done

--- a/player.html
+++ b/player.html
@@ -58,9 +58,9 @@
                 <i class="fas fa-volume-mute volume-close"></i>
             </div>
             <div class="timer-video-player">
-                <span>01:32:58</span>
+                <span class="current-time-video">01:32:58</span>
                 <span>/</span>
-                <span>01:45:00</span>
+                <span class="duration-time-video">01:45:00</span>
             </div>
             <div class="full-screen-video-player">
                 <i class="fas fa-expand open-full-screen"></i>
