lecteur done, il fonctionne bien

--- a/player.html
+++ b/player.html
@@ -30,9 +30,9 @@
                 <i class="fas fa-volume-mute volume-close"></i>
             </div>
             <div class="timer-video-player">
-                <span class="current-time-video">01:32:58</span>
-                <span>/</span>
-                <span class="duration-time-video">01:45:00</span>
+                <span class="current-time-video"></span>
+                <span class="separator-time-video">/</span>
+                <span class="duration-time-video"></span>
             </div>
             <div class="full-screen-video-player">
                 <i class="fas fa-expand open-full-screen"></i>
@@ -40,6 +40,7 @@
             </div>
         </div>
     </div>
+    <i class="fas fa-play play-center-video"></i>
 </div>
 
 <div class="container-video">
@@ -58,9 +59,9 @@
                 <i class="fas fa-volume-mute volume-close"></i>
             </div>
             <div class="timer-video-player">
-                <span class="current-time-video">01:32:58</span>
-                <span>/</span>
-                <span class="duration-time-video">01:45:00</span>
+                <span class="current-time-video"></span>
+                <span class="separator-time-video">/</span>
+                <span class="duration-time-video"></span>
             </div>
             <div class="full-screen-video-player">
                 <i class="fas fa-expand open-full-screen"></i>
@@ -68,6 +69,7 @@
             </div>
         </div>
     </div>
+    <i class="fas fa-play play-center-video"></i>
 </div>
 
 <script type="text/javascript" src="jquery-3.4.1.js"></script>
