sons géré avec range, click sur la video pour pause/play

--- a/player.html
+++ b/player.html
@@ -28,6 +28,7 @@
             <div class="sound-video-player">
                 <i class="fas fa-volume-up volume-open"></i>
                 <i class="fas fa-volume-mute volume-close"></i>
+                <input type="range" min="0" max="10" value="10">
             </div>
             <div class="timer-video-player">
                 <span class="current-time-video"></span>
@@ -57,6 +58,7 @@
             <div class="sound-video-player">
                 <i class="fas fa-volume-up volume-open"></i>
                 <i class="fas fa-volume-mute volume-close"></i>
+                <input type="range" min="0" max="10" value="10">
             </div>
             <div class="timer-video-player">
                 <span class="current-time-video"></span>
